# fixed-buffer-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Readme.md  check-all.sh  check.sh  clean-all.sh  git-push.sh  publish.sh  release.sh  update-readme.sh
.github/workflows/: rust.yaml
examples/: box_benchmark.rs  server.rs
fixed-buffer/: Cargo.toml  Readme.md
fixed-buffer-tokio/: Cargo.toml  Readme.md
fixed-buffer-tokio/src/: async_read_write_chain.rs  async_read_write_take.rs  lib.rs  test_utils.rs
fixed-buffer-tokio/tests/: server.rs
fixed-buffer/box_benchmark/: Cargo.toml  box_benchmark.rs
fixed-buffer/examples/: server.rs
fixed-buffer/src/: deframe_crlf.rs  deframe_line.rs  deframe_null.rs  escape_ascii.rs  lib.rs  read_write_chain.rs  read_write_take.rs  test_utils.rs
fixed-buffer/tests/: server.rs
src/: lib.rs
