[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["parsing", "network-programming"]
description = "Fixed-size buffers for network protocol parsers"
edition = "2018"
keywords = ["io", "network", "tokio", "protocol", "async"]
license = "Apache-2.0"
name = "fixed-buffer"
publish = false
readme = "README.md"
repository = "https://github.com/leonhard-llc/fixed-buffer-rs"
version = "0.1.0"

[dependencies]
tokio = { version = "0.3", features = ["io-util"] }

[dev-dependencies]
crc = "1.8"
tokio = { version = "0.3", features = ["macros", "net", "rt-multi-thread", "time"] }
