[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["parsing", "network-programming"]
description = "Fixed-size buffers for network protocol parsers"
edition = "2018"
keywords = ["io", "network", "tokio", "protocol", "async"]
license = "Apache-2.0"
name = "fixed-buffer"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/fixed-buffer-rs"
version = "0.1.2"

[dependencies]
tokio = { version = "0.3", features = ["io-util"] }

[dev-dependencies]
crc = "1"
clap = "2"
jemalloc-ctl = "0.3"
jemallocator = "0.3"
once_cell = "1"
structopt = "0.3"
tokio = { version = "0.3", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-test = "0.3"
