[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["parsing", "network-programming"]
description = "Tokio support for FixedBuf, fixed-size buffer for network protocol parsers"
edition = "2018"
keywords = ["io", "network", "tokio", "protocol", "async"]
license = "Apache-2.0"
name = "fixed-buffer-tokio"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/fixed-buffer-rs"
version = "0.1.0"

[dependencies]
fixed-buffer = "^0.2.1"
#fixed-buffer = { path = "../fixed-buffer" }
tokio = { version = "0.3", features = ["io-util"] }

[dev-dependencies]
crc = "1"
once_cell = "1"
tokio = { version = "0.3", features = ["macros", "net", "rt", "time"] }
