[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["parsing", "network-programming"]
description = "Fixed-size buffers for network protocol parsers"
edition = "2018"
keywords = ["io", "network", "tokio", "protocol", "async"]
license = "Apache-2.0"
name = "fixed-buffer"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/fixed-buffer-rs"
version = "0.1.7"

[dependencies]

[dev-dependencies]
crc = "1"
once_cell = "1"
